version 0.3.2: Allow to use docker as the virtualization tool
 - Thanks to mwalp for the patch.

version 0.3.1: Use javascript to remember past answers
 - Thanks to Wyrdix for the patch.

version 0.3: Use lighttpd to serve the pages
 - This is particularly important on Ubuntu, as Firefox refuses to
   open local pages, arguing security concerns I fail to understand.
 - Add command 'shutorial list' to see what's next

version 0.2: Intial release